--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Online Store</title>
+    <title>LOCALNESIA</title>
 
     <!--Bootstrap-->
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -23,7 +23,7 @@
     <header>
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-4 col-sm-12 col-12 bg-light">
+                <div class="col-md-4 col-sm-12 col-12">
                     <div class="btn-group">
                         <button class="btn border dropdown-toggle my-md-4 my-2" data-toggle="dropdown"
                             aria-haspopup="true" aria-expanded="false">USD
@@ -33,10 +33,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 col-12 text-center bg-dark">
-                    <h2 class="my-md-3 site-title">LOCALNESIA</h2>
+                <div class="col-md-4 col-12 text-center">
+                    <h2 class="my-md-3 site-title primary-color">LOCALNESIA</h2>
                 </div>
-                <div class="col-md-4 col-12 text-right bg-danger">
+                <div class="col-md-4 col-12 text-right">
                     <p class="my-md-4 header-links">
                         <a href="#" class="px-2">Sign In</a>
                         <a href="#" class="px-1">Create an Account</a>
