--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
 
     <!--Font Awesome-->
-    <script src="https://use.fontawesome.com/77abe66832.js"></script>
+    <script src="https://kit.fontawesome.com/23412c6a8d.js"></script>
+
+    <!--Slick Slider-->
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
 
     <!--Custom CSS-->
     <link rel="stylesheet" href="css/style.css">
@@ -25,7 +28,7 @@
             <div class="row">
                 <div class="col-md-4 col-sm-12 col-12">
                     <div class="btn-group">
-                        <button class="btn border dropdown-toggle my-md-4 my-2" data-toggle="dropdown"
+                        <button class="btn border dropdown-toggle my-md-4 my-2 text-white" data-toggle="dropdown"
                             aria-haspopup="true" aria-expanded="false">USD
                         </button>
                         <div class="dropdown-menu">
@@ -34,7 +37,7 @@
                     </div>
                 </div>
                 <div class="col-md-4 col-12 text-center">
-                    <h2 class="my-md-3 site-title primary-color">LOCALNESIA</h2>
+                    <h2 class="my-md-3 site-title text-white">LOCALNESIA</h2>
                 </div>
                 <div class="col-md-4 col-12 text-right">
                     <p class="my-md-4 header-links">
@@ -44,12 +47,70 @@
                 </div>
             </div>
         </div>
+
+        <div class="container-fluid p-0">
+            <nav class="navbar navbar-expand-lg navbar-light bg-white">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">HOME <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">FEATURES</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">COLLECTION</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">SHOP</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">ABOUT US</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="navbar-nav">
+                    <li class="nav-item border rounded-circle mx-2 search-icon">
+                        <i class="fas fa-search p-2"></i>
+                    </li>
+                    <li class="nav-item border rounded-circle mx-2 basket-icon">
+                        <i class="fas fa-shopping-basket p-2"></i>
+                    </li>
+                </div>
+            </nav>
+        </div>
     </header>
 
+    <!--Main Section-->
     <main>
 
+        <!--First Slider-->
+        <div class="container-fluid p-0">
+            <div class="site-slider">
+                <div class="slider-one">
+                    <div>
+                        <img src="img/assets/item-1.png" class="img-fluid" alt="Banner 1">
+                    </div>
+                    <div>
+                        <img src="img/assets/item-2.png" class="img-fluid" alt="Banner 2">
+                    </div>
+                    <div>
+                        <img src="img/assets/item-3.png" class="img-fluid" alt="Banner 3">
+                    </div>
+                </div>
+                <div class="slider-btn">
+                    <span class="prev position-top"><i class="fas"></i></span>
+                </div>
+            </div>
+        </div>
+        <!--/First Slider-->
     </main>
 
+    <!--Footer Section-->
     <footer>
 
 
@@ -59,6 +120,8 @@
     <script src="js/jquery-3.5.1.slim.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
