--- a/index.html
+++ b/index.html
@@ -103,11 +103,27 @@
                     </div>
                 </div>
                 <div class="slider-btn">
-                    <span class="prev position-top"><i class="fas"></i></span>
+                    <span class="prev position-top"><i class="fas fa-chevron-left"></i></span>
+                    <span class="next position-top right-0"><i class="fas fa-chevron-right"></i></span>
                 </div>
             </div>
         </div>
         <!--/First Slider-->
+
+        <!--Second Slider-->
+
+        <div class="container-fluid">
+            <div class="site-slider-two px-md-4">
+                <div class="row">
+                    <div class="col-md-2 product pt-md-5 pt-4">
+                        <img src="img/assets/product" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--/Second Slider-->
+
     </main>
 
     <!--Footer Section-->
