--- a/index.html
+++ b/index.html
@@ -114,10 +114,36 @@
 
         <div class="container-fluid">
             <div class="site-slider-two px-md-4">
-                <div class="row">
+                <div class="row slider-two text-center">
                     <div class="col-md-2 product pt-md-5 pt-4">
-                        <img src="img/assets/product" alt="">
+                        <img src="img/product/jacket.jpg" alt="Product 1">
+                        <span class="border site-btn btn-span">Jacket</span>
                     </div>
+                    <div class="col-md-2 product pt-md-5 pt-4">
+                        <img src="img/product/jacket.jpg" alt="Product 2">
+                        <span class="border site-btn btn-span">Jacket</span>
+                    </div>
+                    <div class="col-md-2 product pt-md-5 pt-4">
+                        <img src="img/product/jacket.jpg" alt="Product 3">
+                        <span class="border site-btn btn-span">Jacket</span>
+                    </div>
+                    <div class="col-md-2 product pt-md-5 pt-4">
+                        <img src="img/product/jacket.jpg" alt="Product 4">
+                        <span class="border site-btn btn-span">Jacket</span>
+                    </div>
+                    <div class="col-md-2 product pt-md-5 pt-4">
+                        <img src="img/product/jacket.jpg" alt="Product 5">
+                        <span class="border site-btn btn-span">Jacket</span>
+                    </div>
+                </div>
+                <div class="slider-btn">
+                    <span class="prev position-top">
+                        <i class="fas fa-chevron-left fa-2x text-secondary"></i>
+                    </span>
+                    <span class="next position-top right-0">
+                        <i class="fas fa-chevron-right fa-2x text-secondary">
+                        </i>
+                    </span>
                 </div>
             </div>
         </div>
