--- a/index.html
+++ b/index.html
@@ -115,25 +115,17 @@
         <div class="container-fluid">
             <div class="site-slider-two px-md-4">
                 <div class="row slider-two text-center">
-                    <div class="col-md-2 product pt-md-5 pt-4">
+                    <div class="col-md-2 pt-md-5 pt-4">
                         <img src="img/product/jacket.jpg" alt="Product 1">
-                        <span class="border site-btn btn-span">Jacket</span>
+                        <span class="border site-btn btn-span">JACKET</span>
                     </div>
-                    <div class="col-md-2 product pt-md-5 pt-4">
-                        <img src="img/product/jacket.jpg" alt="Product 2">
-                        <span class="border site-btn btn-span">Jacket</span>
+                    <div class="col-md-2 pt-md-5 pt-4">
+                        <img src="img/product/jacket.jpg" alt="Product 1">
+                        <span class="border site-btn btn-span">JACKET</span>
                     </div>
-                    <div class="col-md-2 product pt-md-5 pt-4">
-                        <img src="img/product/jacket.jpg" alt="Product 3">
-                        <span class="border site-btn btn-span">Jacket</span>
-                    </div>
-                    <div class="col-md-2 product pt-md-5 pt-4">
-                        <img src="img/product/jacket.jpg" alt="Product 4">
-                        <span class="border site-btn btn-span">Jacket</span>
-                    </div>
-                    <div class="col-md-2 product pt-md-5 pt-4">
-                        <img src="img/product/jacket.jpg" alt="Product 5">
-                        <span class="border site-btn btn-span">Jacket</span>
+                    <div class="col-md-2 pt-md-5 pt-4">
+                        <img src="img/product/jacket.jpg" alt="Product 1">
+                        <span class="border site-btn btn-span">JACKET</span>
                     </div>
                 </div>
                 <div class="slider-btn">
