--- a/index.html
+++ b/index.html
@@ -18,6 +18,17 @@
     <!--Custom CSS-->
     <link rel="stylesheet" href="css/style.css">
 
+    <!--Owl Carousell-->
+    <link rel="stylesheet" href="css/owl.carousel.min.css">
+    <link rel="stylesheet" href="css/owl.theme.default.css">
+    <script src="js/owl.carousel.js"></script>
+
+    <!--BaguetteBox-->
+    <link rel="stylesheet" href="css/baguetteBox.min.css">
+
+    <!--cards gallery-->
+    <link rel="stylesheet" href="css/cards-gallery.css">
+
 </head>
 
 <body>
@@ -89,30 +100,37 @@
     <main>
 
         <!--First Slider-->
-        <div class="container-fluid p-0">
-            <div class="site-slider">
-                <div class="slider-one">
-                    <div>
-                        <img src="img/assets/item-1.png" class="img-fluid" alt="Banner 1">
-                    </div>
-                    <div>
-                        <img src="img/assets/item-2.png" class="img-fluid" alt="Banner 2">
-                    </div>
-                    <div>
-                        <img src="img/assets/item-3.png" class="img-fluid" alt="Banner 3">
-                    </div>
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img class="d-block w-100" src="img/assets/item-1.png" alt="First slide">
                 </div>
-                <div class="slider-btn">
-                    <span class="prev position-top"><i class="fas fa-chevron-left"></i></span>
-                    <span class="next position-top right-0"><i class="fas fa-chevron-right"></i></span>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="img/assets/item-2.png" alt="Second slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="img/assets/item-3.png" alt="Third slide">
                 </div>
             </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
         </div>
         <!--/First Slider-->
 
         <!--Second Slider-->
 
-        <div class="container-fluid">
+        <!-- <div class="container-fluid">
             <div class="site-slider-two px-md-4">
                 <div class="row slider-two text-center">
                     <div class="col-md-2 pt-md-5 pt-4">
@@ -138,9 +156,36 @@
                     </span>
                 </div>
             </div>
-        </div>
+        </div> -->
 
         <!--/Second Slider-->
+
+        <!--Product-->
+        <section class="gallery-block cards-gallery">
+            <div class="container">
+                <br><br>
+                <div class="heading">
+                    <h2 style="color:#6BAEE0">PRODUCT</h2>
+                </div>
+                <br>
+                <div class="row" style="font-family:Open Sans">
+                    <div class="col-md-6 col-lg-4">
+                        <div class="card border-0 transform-on-hover">
+                            <a class="lightbox" href="#">
+                                <img src="img/product/jacket.jpg" alt="Card Image" class="card-img-top">
+                            </a>
+                            <div class="card-body">
+                                <h6><a href="#">ERIGO JACKET</a></h6>
+                                <p class="text-muted card-text">Rp 210.000</p>
+                                <a href="" type="button" class="btn btn-primary"
+                                    style="color: #FFFFFF; font-family:Open Sans">BUY</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!--/Product-->
 
     </main>
 
@@ -156,6 +201,13 @@
     <script src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/baguetteBox.min.js"></script>
+    <script>
+        baguetteBox.run('.cards-gallery', {
+            animation: 'slideIn'
+        });
+    </script>
 </body>
 
 </html>
